--- a/less/phone/phone_login.less
+++ b/less/phone/phone_login.less
@@ -31,14 +31,22 @@ em{ }
 }
 
 
-
+.cx_bg{
+	background: #000;
+	opacity: 0.6;
+	width: 100%;
+	position: absolute;
+	top:0;
+	left:0;
+	height:400px;
+}
 .cx_login{
 	.cli(#FFF,90%,auto,10px);
 	height:30em;
-	position:relative;
-	top:20px;
+	position:fixed;
+	// top:50%;
 	text-align:left;
-	
+	// margin-top: -45%;
 	left:50%;
 	margin-left:-45%;
 	
