--- a/less/pc/login.less
+++ b/less/pc/login.less
@@ -34,6 +34,7 @@ em{ }
 	opacity: 0.6;
 	width: 100%;
 	position: absolute;
+	z-index: 1000;
 	top:0;
 	left:0;
 	height:400px;
@@ -41,6 +42,7 @@ em{ }
 .cx_login{
 	.cli(#FFF,400px,auto,10px);
 	position:fixed;
+	z-index: 1000;
 	top:20px;
 	text-align:left;
 	
