--- a/less/phone/phone_login.less
+++ b/less/phone/phone_login.less
@@ -36,6 +36,7 @@ em{ }
 	opacity: 0.6;
 	width: 100%;
 	position: absolute;
+	z-index: 1000;
 	top:0;
 	left:0;
 	height:400px;
@@ -44,6 +45,7 @@ em{ }
 	.cli(#FFF,90%,auto,10px);
 	height:30em;
 	position:fixed;
+	z-index: 1000;
 	// top:50%;
 	text-align:left;
 	// margin-top: -45%;
