--- a/css/pc/login.css
+++ b/css/pc/login.css
@@ -6,6 +6,7 @@
   opacity: 0.6;
   width: 100%;
   position: absolute;
+  z-index: 1000;
   top: 0;
   left: 0;
   height: 400px;
@@ -22,6 +23,7 @@
   -webkit-border-radius: 10px;
   border-radius: 10px;
   position: fixed;
+  z-index: 1000;
   top: 20px;
   text-align: left;
   left: 50%;
