--- a/css/phone/phone_login.css
+++ b/css/phone/phone_login.css
@@ -9,6 +9,7 @@
   opacity: 0.6;
   width: 100%;
   position: absolute;
+  z-index: 1000;
   top: 0;
   left: 0;
   height: 400px;
@@ -26,6 +27,7 @@
   border-radius: 10px;
   height: 30em;
   position: fixed;
+  z-index: 1000;
   text-align: left;
   left: 50%;
   margin-left: -45%;
